Changes file for Business::DK::CVR

The project Changelog is available at:

http://logiclab.jira.com/browse/BDKCVR#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel

0.09 2014-08-23, maintenance release, update not required

- Added specification of required Perl version, settling for
  5.8 for now as reported by Perl::Critic


0.08 2014-08-15, maintenance release, update not required

- Addressing Kwalitee, aligning version for version consistency
  in modules in distribution

- Added changes.t automatic assertion of the integrity of the
  Changes file, see also BDKCVR-8 [BDKCVR-9]

  https://logiclab.jira.com/browse/BDKCVR-9


0.07 2013-08-01, maintenance release, update not required

- Fixed up Changes file as part of my Questhub quest adhering to
  the standard described in: CPAN::Changes::Spec [BDKCVR-8]

  Quest: http://questhub.io/realm/perl/quest/51f0fd8e18ba7dcf4b000040
  Spec: https://metacpan.org/module/CPAN::Changes::Spec

  https://logiclab.jira.com/browse/BDKCVR-8

- Added contemporay boiler plate of Perl::Critic test [BDKCVR-5]

  https://logiclab.jira.com/browse/BDKCVR-5


0.06 2011-02, maintenance release, update not required

- Added use of Params::Validate in key places and phased out use
  of Business::DK::PO

- Made control cifers Readonly

- The _length method has been removed, since it's use was
  obsoleted


0.05 2008-06-11, feature release, update not required

- Add object oriented variant implementation [BDKCVR-1],
  introducing Class::Business::DK::CVR

- Added prerequisites test (Test::Prereq) [BDKCVR-2]

- Added requirement of Scalar::Util, we are stealing as much as
  we can from Michael Peters's distribution:

    Data::FormValidator::Constraints::DateTime

- Added a LICENSE file

- Added LICENSE file and split COPYRIGHT and LICENSE section in
  POD into two separate sections

- Restructured tests files to follow namespace in directory
  structure

- Added recursive_test_files to Build.PL
