@@ -5,3 +5,49 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+
+before_install:
+
+   # Prevent "Please tell me who you are" errors for certain DZIL configs
+
+   - git config --global user.name "TravisCI"
+
+install:
+
+   # Deal with all of the DZIL dependencies, quickly and quietly
+
+   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
+
+   # Hack to getting the latest Test::Kwalitee
+
+   - cpanm --quiet --notest Test::Kwalitee
+
+   # Getting coveralls report
+
+   - cpanm --quiet --notest Devel::Cover::Report::Coveralls
+
+   # Getting cover command for Dist::Zilla
+
+   - cpanm --quiet --notest Dist::Zilla::App::Command::cover
+
+   # Getting all the plugins used by Dist::Zilla in this particular setup
+
+   - dzil authordeps | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
+
+   # Getting all the dependencies requested by author
+
+   - dzil listdeps --author | cpanm --quiet --notest --skip-satisfied
+
+   - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
+
+   # Getting all the dependencies requested by distribution
+
+   - dzil listdeps | grep -vP '[^\w:]' | cpanm --quiet --notest --skip-satisfied
+
+script:
+
+   - dzil smoke --release --author
+
+after_success:
+
+    - dzil cover -outputdir cover_db -report coveralls
