@@ -1,17 +1,0 @@
-INSTALL file for Business-DK-CVR
-
-$Id: INSTALL,v 1.1 2006-02-20 21:37:04 jonasbn Exp $
-
-1. tar -xvzf Business-DK-CVR-0.01.tar.gz 
-
-2. cd Business-DK-CVR
-
-3. perl Makefile.PL
-
-4. make
-
-5. make test
-
-6. make install (requires privileged access)
-
-7. make clean  
