@@ -1,11 +1,0 @@
-License for Business-DK-CVR
-
-$Id: LICENSE,v 1.1 2008-06-11 08:08:00 jonasbn Exp $
-
-Business-DK-CVR is released under the artistic license
-
-The distribution is licensed under the Artistic License, as specified
-by the Artistic file in the standard perl distribution
-(http://www.perl.com/language/misc/Artistic.html).
-
-Business-DK-CVR is (C) by Jonas B. Nielsen, (jonasbn) 2006-2008
