@@ -1,0 +1,47 @@
+name    = Business-DK-CVR
+author  = Jonas B. Nielsen <jonasbn@cpan.org>
+license = Artistic_2_0
+copyright_holder = Jonas B. Nielsen
+
+[@Basic]
+
+[GitHub::Meta]
+
+[VersionFromModule]
+
+[ExtraTests]
+
+[Test::Perl::Critic]
+
+[PodCoverageTests]
+
+[PodSyntaxTests]
+
+[Test::Kwalitee]
+
+[Test::Compile]
+fail_on_warning = none
+
+[Test::CPAN::Changes]
+
+[ModuleBuild]
+mb_version = 0.30
+
+[MetaJSON]
+
+[Prereqs]
+Exporter            = 0
+Carp                = 0
+Scalar::Util        = 0
+Class::InsideOut    = 0
+English             = 0
+Params::Validate    = 0
+Readonly            = 0
+perl                = 5.008
+Test::More          = 0
+Test::Exception     = 0
+Test::Perl::Critic  = 0
+Test::Taint         = 0
+Test::Kwalitee      = 0
+Taint::Runtime      = 0
+Data::FormValidator = 0
