@@ -1,9 +1,0 @@
-# $Id: pod.t,v 1.1 2008-06-11 08:08:00 jonasbn Exp $ 
-
-use Test::More;
-
-eval "use Test::Pod 1.14";
-plan skip_all => 'Test::Pod 1.14 required' if $@;
-plan skip_all => 'set TEST_POD to enable this test' unless $ENV{TEST_POD};
-
-all_pod_files_ok();
